# Awesome-GameDev-Resources

./: .clang-format  .gitignore  .gitmodules  .releaserc.json  404.html  CHANGELOG.md  CMakeLists.txt  CNAME  LICENSE  README.md  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  mkdocs.yml  package.json  robots.txt  sitemap.xml
.github/ISSUE_TEMPLATE/: art-dojo.md  coding-dojo.md  contests.md  integrated-project.md  lecture.md  request-for-comments.md  workshop.md
.github/workflows/: documentation.yaml  release-pdf.yaml
advanced/: CMakeLists.txt  README.md  index.html
advanced/01-introduction/: CMakeLists.txt  README.md  index.html
advanced/01-introduction/actvities/: CMakeLists.txt
advanced/02-oop/: index.html
advanced/03-pointers/: index.html
advanced/04-operators/: index.html
advancedcpp/: README.md
advancedcpp/01-introduction/: README.md
algorithms/: README.md  index.html
algorithms/01-introduction/: index.html
algorithms/02-analysis/: index.html
algorithms/03-dynamic-data/: index.html
algorithms/04-sorting/: index.html
algorithms/05-divide-and-conquer/: index.html
algorithms/06-hashtables/: index.html
algorithms/07-midterm/: index.html
algorithms/08-stack-and-queue/: index.html
algorithms/09-break/: index.html
algorithms/10-graphs/: index.html
algorithms/11-dijkstra/: index.html
algorithms/12-mst/: index.html
algorithms/12-prims/: index.html
algorithms/13-bst/: index.html
algorithms/14-heap/: index.html
algorithms/15-project/: index.html
algorithms/16-finals/: index.html
artificialintelligence/: CMakeLists.txt  README.md  index.html
artificialintelligence/00-introduction/: README.md  index.html
artificialintelligence/01-pcg/: README.md  index.html
artificialintelligence/02-sm/: README.md  index.html
artificialintelligence/03-boardgames/: index.html
artificialintelligence/04-spacequantization/: README.md
artificialintelligence/04-spatialhashing/: index.html
artificialintelligence/05-kdtree/: index.html
artificialintelligence/06-pathfinding/: index.html
artificialintelligence/07-automatedtesting/: index.html
artificialintelligence/09-minmax/: index.html
artificialintelligence/animation/: README.md  index.html
artificialintelligence/assignments/: README.md  index.html
artificialintelligence/assignments/catchthecat/: CMakeLists.txt  Catcher.h  index.html  simulator.cpp
artificialintelligence/assignments/catchthecat/tests/: test-aa.in  test-aa.out  test-ab.in  test-ab.out  test-ac.out  test-ad.in  test-ae.out  test-af.in
artificialintelligence/assignments/life/: CMakeLists.txt  README.md  index.html
artificialintelligence/assignments/life/tests/: test-a.in  test-b.in  test-b.out  test-c.in  test-c.out  test-d.in  test-d.out  test-f.in  test-f.out  test-g.in  test-g.out  test-h.in  test-i.in  test-i.out  test-j.in  test-j.out  test-k.in  test-k.out  test-l.in  test-l.out  test-m.in  test-m.out  test00.in  test01.in  test01.out  test02.in  test02.out  test03.in  test03.out  test04.in  test04.out  test05.in  test05.out  test06.in  test06.out  test07.in  test07.out  test08.in  test08.out  test09.in  (+7 more)
artificialintelligence/assignments/maze/: CMakeLists.txt  README.md  index.html  maze.cpp
artificialintelligence/assignments/maze/maze-datastructure/: index.html
artificialintelligence/assignments/maze/tests/: maze-b.out  maze-c.in  maze-d.out  maze-e.out  maze-h.out  maze-i.out  maze-k.in  maze-k.out
artificialintelligence/readings/: spatial-quantization.md
artificialintelligence/slides/: test.md
blog/: .authors.yml  index.html
cmake/: get_cpm.cmake  tools.cmake
courses/advanced/: README.md
courses/algorithms/: README.md
courses/artificialintelligence/: CMakeLists.txt  README.md
courses/artificialintelligence/00-introduction/: README.md
courses/artificialintelligence/04-spatialhashing/: README.md
courses/artificialintelligence/05-kdtree/: README.md
courses/artificialintelligence/assignments/: README.md
courses/artificialintelligence/assignments/catchthecat/: CMakeLists.txt  Cat.h  Catcher.h  IAgent.h  README.md  simulator.cpp
courses/artificialintelligence/assignments/catchthecat/tests/: test-ac.in  test-af.out
courses/artificialintelligence/assignments/flocking/: README.md  flocking.cpp
courses/artificialintelligence/assignments/flocking/tests/: test-a.in  test-a.out  test-b.in  test-b.out  test-c.in  test-c.out  test-d.in  test-d.out  test-e.in  test-e.out  test-f.in  test-f.out  test-g.in  test-g.out  test-h.in  test-h.out  test-i.out  test-j.in  test-j.out  test-k.in  test-k.out  test-l.in  test-l.out  test-m.in  test-m.out  test-o.in  test-o.out
courses/artificialintelligence/assignments/genai/: README.md
courses/artificialintelligence/assignments/life/: README.md  life.cpp  life_Tolsta.cpp
courses/artificialintelligence/assignments/life/tests/: test-e.out  test-h.out
courses/artificialintelligence/assignments/maze/tests/: maze-a.out  maze-g.in  maze-h.in  maze-j.out
courses/artificialintelligence/assignments/rng/: README.md  rng.cpp
courses/artificialintelligence/assignments/rng/tests/: test-b.out  test-c.in  test-d.out  test-e.in  test-e.out  test-f.in  test-f.out  test-g.out  test-i.out  test-j.out
courses/artificialintelligence/readings/: spatial-quantization.md
courses/intro/: README.md
courses/portfolio/: README.md
courses/tools/: git.md
datastructures/: README.md
docs/: README.md
docs/advanced/: README.md
docs/algorithms/: README.md
docs/artificialintelligence/: CMakeLists.txt  README.md
documentation/: CMakeLists.txt  Doxyfile  conf.py
documentation/pages/: about.dox
dojo/: Full-Cycle-SDL-Development.md  The-most-asked-interview-question.md  index.html
intro/: CMakeLists.txt  README.md  index.html
intro/02-tooling/: CMakeLists.txt  README.md  extremelyBasic.cpp  hello.cpp  index.html
introgameprog/: index.html
javascripts/: katex.js  mathjax.js
overrides/: main.html  reveal.html
portfolio/: README.md  index.html
search/: search_index.json
(+256 files in other folders)
